--- a/gestion_Act_FAI_Root/home/templates/home/historique.html
+++ b/gestion_Act_FAI_Root/home/templates/home/historique.html
@@ -4,8 +4,65 @@
 <body>
 
     {% block content %}
-     
-        <div class="tirethead orange "><br></div>
+        <br><br><br><br>
+        <!-- py-5 : marge -->
+        <div class="album  gris">
+          <div>
+
+            <div class="row g-3" style="margin-left: 3px ;">
+              <div class="">
+                <div class="card shadow-sm">
+                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#060452"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Visite de site<span class="badge bleu">3</span></text></svg>
+                  <div class="card-body">
+                    <p class="nomClient"><span class="badge bleu">1</span> M. Zougou</p>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <hr>
+                  </div>
+                </div>
+              </div>
+              <div class="">
+                <div class="card shadow-sm">
+                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#008523"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Installation<span class="badge vert">4</span></text></svg>
+                  <div class="card-body">
+                    <p class="nomClient"><span class="badge vert">1</span> M. Zougou</p>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <hr>
+                    <p class="nomClient"><span class="badge vert">2</span> M. Koutou</p>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <hr>
+                  </div>
+                </div>
+              </div>
+              <div class="">
+                <div class="card shadow-sm">
+                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="orange"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Visite de site<span class="badge orange">3</span></text></svg>
+                  <div class="card-body">
+                    <p class="nomClient"><span class="badge orange">1</span> M. Zougou</p>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <hr>
+                    <p class="nomClient"><span class="badge orange">2</span> M. Koutou</p>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <hr>
+                    <p class="nomClient"><span class="badge orange">3</span> Mme. Tuliana</p>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <hr>
+                  </div>
+                </div>
+              </div>
+              <div class="">
+                <div class="card shadow-sm">
+                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#FF2043"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Retrait<span class="badge rouge">1</span></text></svg>
+                  <div class="card-body">
+                    <p class="nomClient"><span class="badge orange">1</span> M. Zougou</p>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <hr>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
     {% endblock %}>
 
 </body>
