--- a/gestion_Act_FAI_Root/home/templates/home/index.html
+++ b/gestion_Act_FAI_Root/home/templates/home/index.html
@@ -83,7 +83,9 @@
           <h2 class="titre">Département Technique</h2>
           <hr>
           <div class="col-lg-3 col-md-4 col-sm-6 col-6"> 
-            <img src={% static 'image/perso.png' %} alt="" class="profil1">
+            <a href='info/'>
+              <img src={% static 'image/perso.png' %} alt="" class="profil1">
+            </a>
             <h2>Hamed Dani</h2>
             <p>Technicien</p>
             <p class="btn btn-secondary survol">(226) 70 50 20 10</p>
