--- a/gestion_Act_FAI_Root/home/templates/home/header.html
+++ b/gestion_Act_FAI_Root/home/templates/home/header.html
@@ -1,5 +1,6 @@
  {% load static %}
  	<!-- Debut Entête -->
+			<div class="orange fixed-top" style="padding: 29px;"><br></div>
 			<nav class="navbar navbar-expand-sm navbar-dark bg fixed-top" aria-label="Third navbar example">
 		    	<div class="container-fluid">
 		    		<a class="navbar-brand" href="#"><img src={% static 'image/logo.PNG' %} id="logo">
@@ -14,7 +15,7 @@
 								<a class="nav-link active" aria-current="page" href="#">Acceuil</a>
 		    	      		</li>
 		    	      		<li class="nav-item">
-		    	        		<a class="nav-link" href="#">Historique</a>
+		    	        		<a class="nav-link" href="historique/">Historique</a>
 		    	      		</li>
 		    	      		<li class="nav-item">
 		    	        		<a class="nav-link" href="#">Discussion<span class="badge orange">3</span></a>
