--- a/gestion_Act_FAI_Root/home/static/css/style.css
+++ b/gestion_Act_FAI_Root/home/static/css/style.css
@@ -34,8 +34,13 @@
 }
 .rouge{
   margin: 3px;
-  background-color: #FF2043;
+  background-color: #55595c;
 }
+
+.whiteT{
+  color: white;
+}
+
 
 
 .team{
@@ -44,6 +49,13 @@
 
 .titre{
   text-align: center;
+  font-weight: 800;
+  color: grey;
+}
+
+#title{
+  text-align: center;
+  font-weight: 800;
   color: grey;
 }
 /* Fin Couleur */
@@ -86,20 +98,12 @@
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
-@media (min-width: 40em) {
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 1.25rem;
-    font-size: 1.25rem;
-    line-height: 1.4;
-  }
-
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
-  }
-}
 
+  }
+}*/
   /* fin carousel */
 
 
@@ -140,17 +144,20 @@
   text-align: center;
 }
 .team h2 {
-  font-weight: 400;
+  font-weight: 600;
 }
 /* rtl:begin:ignore */
-.team .col-lg-3 p {
-  margin-right: .75rem;
-  margin-left: .75rem;
+
+.nombre{
+  display: flex;
+  justify-content: center;
 }
 
-.team .col-lg-4 p {
-  margin-right: .75rem;
-  margin-left: .75rem;
+.number{
+  width: 140px;
+  height: 40px;
+  padding-top: 7.5px;
+  border-radius: 7px 7px 7px 7px;
 }
 
 
