--- a/gestion_Act_FAI_Root/home/templates/home/historique.html
+++ b/gestion_Act_FAI_Root/home/templates/home/historique.html
@@ -34,8 +34,8 @@
                 </div>
               </div>
               <div class="">
-                <div class="card shadow-sm">
-                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="orange"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Visite de site<span class="badge orange">3</span></text></svg>
+                <div class="card shadow-sm" id="a">
+                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="orange"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dépannage<span class="badge orange">3</span></text></svg>
                   <div class="card-body">
                     <p class="nomClient"><span class="badge orange">1</span> M. Zougou</p>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
@@ -51,9 +51,9 @@
               </div>
               <div class="">
                 <div class="card shadow-sm">
-                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#FF2043"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Retrait<span class="badge rouge">1</span></text></svg>
+                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Retrait<span class="badge rouge">1</span></text></svg>
                   <div class="card-body">
-                    <p class="nomClient"><span class="badge orange">1</span> M. Zougou</p>
+                    <p class="nomClient"><span class="badge rouge">1</span> M. Zougou</p>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
                     <hr>
                   </div>
