--- a/gestion_Act_FAI_Root/home/templates/home/index.html
+++ b/gestion_Act_FAI_Root/home/templates/home/index.html
@@ -61,77 +61,79 @@
         <h1 class="titre">Equipe</h1>
         <hr>
         <div class="row ">
+        {% for user in users %}
+          {% if user.job == 'DG' %}
           <div class="col-lg-4 col-sm-12 col-12">
             <img src={% static 'image/logo1.PNG' %} alt="" class="profil">
-            <h2> Steve SANKARA</h2>
+            <h2>{{ user.first_name }} {{ user.last_name }}</h2>
             <p>Dicteur Général</p>
-            <p><a class="btn btn-secondary" href="#">(226) 70 50 11 11</a></p>
+            {% if user.leave == False %}
+            <div class="nombre">
+              <p class="bleu whiteT number">(226) {{ user.phone_number}}</a></p>
+            </div>
+            {% else %}
+            <div class="nombre">
+              <p class="orange number">(226) {{ user.phone_number}}</a></p>
+            </div>
+            {% endif %}
           </div>
+          {% endif %}
+          {% if user.job == 'DAF' %}
           <div class="col-lg-4 col-sm-6 col-12"> 
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRv9X3ouKQ82k_KS18-okhCsoaTI8JbyL6JwtHi23LpF0Xes5MyhYpb0w_YHZ41TYRr5dk&usqp=CAU" alt="" class="profil">
-            <h2>Kévin Ouédraogo</h2>
+            <h2>{{ user.first_name }} {{ user.last_name }}</h2>
             <p>Directeur Administratif et Financier</p>
-            <p class="btn btn-secondary survol">(226) 70 50 11 12</p>
+            {% if user.leave == False %}
+            <div class="nombre">
+              <p class="bleu whiteT number">(226) {{ user.phone_number}}</a></p>
+            </div>
+            {% else %}
+            <div class="nombre">
+              <p class="orange number">(226) {{ user.phone_number}}</a></p>
+            </div>
+            {% endif %}
           </div>
+          {% endif %}
+          {% if user.job == 'DT' %}
           <div class="col-lg-4 col-sm-6 col-12"> 
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJtPL_-lNqq_qlw76VFjzu6IH4_QMpS5TBkA&usqp=CAU" alt="" class="profil">
-            <h2>John Da</h2>
+            <h2>{{ user.first_name }} {{ user.last_name }}</h2>
             <p>Directeur Technique</p>
-            <p class="btn btn-secondary survol">(226) 70 50 11 13</p>
+            {% if user.leave == False %}
+            <div class="nombre">
+              <p class="bleu whiteT number">(226) {{ user.phone_number}}</a></p>
+            </div>
+            {% else %}
+            <div class="nombre">
+              <p class="orange number">(226) {{ user.phone_number}}</a></p>
+            </div>
+            {% endif %}
           </div>
+          {% endif %}
+        {% endfor %}
           <br>
-          <h2 class="titre">Département Technique</h2>
+          <h2 id="title">Département Technique</h2>
           <hr>
+        {% for user in users %}
+          {% if user.job == 'Technicien' %}
           <div class="col-lg-3 col-md-4 col-sm-6 col-6"> 
-            <a href='info/'>
+            <a href="info/{{user.id}}">
               <img src={% static 'image/perso.png' %} alt="" class="profil1">
             </a>
-            <h2>Hamed Dani</h2>
+            <h2>{{ user.first_name }} {{ user.last_name }}</h2>
             <p>Technicien</p>
-            <p class="btn btn-secondary survol">(226) 70 50 20 10</p>
+            {% if user.leave == False %}
+            <div class="nombre">
+              <p class="bleu whiteT number">(226) {{ user.phone_number}}</a></p>
+            </div>
+            {% else %}
+            <div class="nombre">
+              <p class="orange number">(226) {{ user.phone_number}}</a></p>
+            </div>
+            {% endif %}
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-6"> 
-            <img src={% static 'image/perso.png' %} alt="" class="profil1">
-            <h2>Hamed Barry</h2>
-            <p>Technicien</p>
-            <p class="btn btn-secondary survol">(226) 70 50 20 11</p>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-6"> 
-            <img src={% static 'image/perso.png' %} alt="" class="profil1">
-            <h2>Hamed Barry</h2>
-            <p>Technicien</p>
-            <p class="btn btn-secondary survol">(226) 70 50 20 12</p>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-6"> 
-            <img src={% static 'image/perso.png' %} alt="" class="profil1">
-            <h2>Hamed Barry</h2>
-            <p>Technicien</p>
-            <p class="btn btn-secondary survol">(226) 70 50 20 13</p>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-6"> 
-            <img src={% static 'image/perso.png' %} alt="" class="profil1">
-            <h2>Hamed Barry</h2>
-            <p>Technicien</p>
-            <p class="btn btn-secondary survol">(226) 70 50 20 10</p>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-6"> 
-            <img src={% static 'image/perso.png' %} alt="" class="profil1">
-            <h2>Hamed Barry</h2>
-            <p>Technicien</p>
-            <p class="btn btn-secondary survol">(226) 70 50 20 11</p>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-6"> 
-            <img src={% static 'image/perso.png' %} alt="" class="profil1">
-            <h2>Hamed Barry</h2>
-            <p>Technicien</p>
-            <p class="btn btn-secondary survol">(226) 70 50 20 12</p>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-6"> 
-            <img src={% static 'image/perso.png' %} alt="" class="profil1">
-            <h2>Hamed Barry</h2>
-            <p>Technicien</p>
-            <p class="btn btn-secondary survol">(226) 70 50 20 13</p>
-          </div>
+          {% endif %}
+        {% endfor %}  
         </div><!-- /.row -->
       </div>
     {% endblock %}
