--- a/gestion_Act_FAI_Root/home/templates/home/infoActEmploy.html
+++ b/gestion_Act_FAI_Root/home/templates/home/infoActEmploy.html
@@ -10,7 +10,7 @@
                 <div class="row"></div>
                     <div class="col ajust"> 
                         <img src={% static 'image/perso.png' %}  alt="" class="profil2">
-                      <h2>Hamed Barry</h2>
+                      <h2>{{ user.first_name }} {{ user.last_name }}</h2>
                     </div>
                     <hr>
                 </div>
@@ -56,13 +56,13 @@
                         <p class="nomClient"><span class="badge orange">2</span> M. Koutou</p>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
                         <hr>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Voir</button>
+                        <a href="{% url 'historique'%}#a"><button type="button" class="btn btn-sm btn-outline-secondary">Voir</button></a>
                       </div>
                     </div>
                   </div>
                   <div class="col">
                     <div class="card shadow-sm">
-                      <svg class="bd-placeholder-img card-img-top" width="100%" height="80" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#FF2043"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Retrait<span class="badge rouge">0</span></text></svg>
+                      <svg class="bd-placeholder-img card-img-top" width="100%" height="80" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Retrait<span class="badge rouge">0</span></text></svg>
                       <div class="card-body">
                         <hr>
                         <button type="button" class="btn btn-sm btn-outline-secondary">Voir</button>
