--- a/gestion_Act_FAI_Root/home/templates/home/historique.html
+++ b/gestion_Act_FAI_Root/home/templates/home/historique.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 {% extends './base.html' %}
-<html lang="en">
-<body>
-
     {% block content %}
         <br><br><br><br>
         <!-- py-5 : marge -->
@@ -14,9 +11,40 @@
                 <div class="card shadow-sm">
                   <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#060452"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Visite de site<span class="badge bleu">3</span></text></svg>
                   <div class="card-body">
-                    <p class="nomClient"><span class="badge bleu">1</span> M. Zougou</p>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                    <hr>
+                    <table class="table table-hover ">
+                      <thead>
+                        <tr>
+                          <th scope="col" class="col-1 centre">Heures</th>
+                          <th scope="col" class="col-2 centre">Clients</th>
+                          <th scope="col" class="col-1 centre">Liens</th>
+                          <th scope="col" class="col-2 centre">Intervenants</th>
+                          <th scope="col" class="centre">Commentaires</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th class="centre">8h 40mn</th>
+                          <td class="centre">Mark Tanga</td>
+                          <td class="centre">Fonctionnel</td>
+                          <td class="centre">Sankara Steve <br><br> Saakjbi jbivjhjh</td>
+                          <td>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as</td>
+                        </tr>
+                        <tr>
+                          <th class="centre">10h 30mn</th>
+                          <td class="centre">Kaled Brou</td>
+                          <td class="centre">Fonctionnel</td>
+                          <td class="centre">Sarana Sou <br><br> Dantir Sana</td>
+                          <td>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with .</td>
+                        </tr>                        
+                        <tr>
+                          <th class="centre">14h 30mn</th>
+                          <td class="centre">Kaled Brou</td>
+                          <td class="centre">Fonctionnel</td>
+                          <td class="centre">Sarana Sou <br><br> Dantir Sana</td>
+                          <td>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with .</td>
+                        </tr>
+                      </tbody>
+                    </table>
                   </div>
                 </div>
               </div>
@@ -62,7 +90,5 @@
             </div>
           </div>
         </div>
-
     {% endblock %}>
 
-</body>
