Ajout impression avec le DOM et le CSS

--- a/gestion_Act_FAI_Root/home/templates/home/header.html
+++ b/gestion_Act_FAI_Root/home/templates/home/header.html
@@ -19,6 +19,12 @@
 		    	      		</li>
 		    	      		<li class="nav-item">
 		    	        		<a class="nav-link" href="{% url 'clients'%}">Clients</a>
+		    	      		</li>		    	      		
+		    	      		<li class="nav-item">
+		    	        		<a class="nav-link" href="{% url 'technique'%}">Technique</a>
+		    	      		</li>
+		    	      		<li class="nav-item">
+		    	        		<a class="nav-link" href="{% url 'statistique'%}">Statistique</a>
 		    	      		</li>
 						</ul>
 						<form>
