--- a/gestion_Act_FAI_Root/home/templates/home/historique.html
+++ b/gestion_Act_FAI_Root/home/templates/home/historique.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
 {% extends './base.html' %}
+{% load static %}
     {% block content %}
-        <br><br><br><br>
+        <br>
         <!-- py-5 : marge -->
-        <div class="album  gris">
+        <div class="voir">
+        <img src={% static 'image/logo.PNG' %} id="logo">
+          <br><br>
           <div>
-
             <div class="row g-3" style="margin-left: 3px ;">
-              <div class="">
+              <div id="v">
                 <div class="card shadow-sm">
-                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#060452"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Visite de site<span class="badge bleu">3</span></text></svg>
+                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#060452"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Visites de site<span class="badge bleu">3</span></text></svg>
                   <div class="card-body">
                     <table class="table table-hover ">
                       <thead>
@@ -48,9 +49,9 @@
                   </div>
                 </div>
               </div>
-              <div class="">
+              <div id="i">
                 <div class="card shadow-sm">
-                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#008523"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Installation<span class="badge vert">4</span></text></svg>
+                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#008523"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Installations<span class="badge vert">4</span></text></svg>
                   <div class="card-body">
                     <p class="nomClient"><span class="badge vert">1</span> M. Zougou</p>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
@@ -61,9 +62,9 @@
                   </div>
                 </div>
               </div>
-              <div class="">
-                <div class="card shadow-sm" id="a">
-                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="orange"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dépannage<span class="badge orange">3</span></text></svg>
+              <div id="d">
+                <div class="card shadow-sm" >
+                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="orange"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dépannages<span class="badge orange">3</span></text></svg>
                   <div class="card-body">
                     <p class="nomClient"><span class="badge orange">1</span> M. Zougou</p>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
@@ -77,9 +78,9 @@
                   </div>
                 </div>
               </div>
-              <div class="">
+              <div id="r">
                 <div class="card shadow-sm">
-                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Retrait<span class="badge rouge">1</span></text></svg>
+                  <svg class="bd-placeholder-img card-img-top" width="100%" height="50" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Retraits<span class="badge rouge">1</span></text></svg>
                   <div class="card-body">
                     <p class="nomClient"><span class="badge rouge">1</span> M. Zougou</p>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longerThis is a wider card with supporting text below as a natural lead-in to additional content.</p>
@@ -90,5 +91,6 @@
             </div>
           </div>
         </div>
+        {% include './impression.html'%}
     {% endblock %}>
 
